velocity plugin działa razem z aisector 1